Fix nav hover colors on mobile

--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -123,7 +123,11 @@
       color: $c4;
 
       .fp-viewing-header & {
-        color: $c2;
+        color: $c4;
+
+        @include md {
+          color: $c2;
+        }
       }
     }
   }
